--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@remix-run/react": "^1.14.3",
     "@remix-run/vercel": "^1.14.3",
     "@vercel/node": "^2.6.2",
+    "dotenv": "^16.0.3",
     "isbot": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
