--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.0.3",
     "isbot": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-string-replace": "^1.1.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.14.3",
