--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "@remix-run/node": "^1.14.3",
     "@remix-run/react": "^1.14.3",
     "@remix-run/vercel": "^1.14.3",
@@ -30,6 +31,7 @@
     "eslint": "^8.27.0",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
+    "prisma": "^4.12.0",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.8.4"
   },
