--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
     "@prisma/client": "^4.12.0",
     "@remix-run/node": "^1.14.3",
     "@remix-run/react": "^1.14.3",
