--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@remix-run/react": "^1.14.3",
     "@remix-run/vercel": "^1.14.3",
     "@vercel/node": "^2.6.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "isbot": "latest",
     "react": "^18.2.0",
@@ -31,6 +32,7 @@
     "@remix-run/dev": "^1.14.3",
     "@remix-run/eslint-config": "^1.14.3",
     "@remix-run/serve": "^1.14.3",
+    "@types/bcryptjs": "^2.4.2",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "autoprefixer": "^10.4.14",
