--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "isbot": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-string-replace": "^1.1.0"
+    "react-string-replace": "^1.1.0",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.14.3",
