--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "isbot": "latest",
+    "node-cron": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-string-replace": "^1.1.0",
@@ -34,6 +35,7 @@
     "@remix-run/eslint-config": "^1.14.3",
     "@remix-run/serve": "^1.14.3",
     "@types/bcryptjs": "^2.4.2",
+    "@types/node-cron": "^3.0.7",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "autoprefixer": "^10.4.14",
