--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "isbot": "latest",
+    "lodash": "^4.17.21",
     "node-cron": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,6 +36,7 @@
     "@remix-run/eslint-config": "^1.14.3",
     "@remix-run/serve": "^1.14.3",
     "@types/bcryptjs": "^2.4.2",
+    "@types/lodash": "^4.14.195",
     "@types/node-cron": "^3.0.7",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
