--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
     "@prisma/client": "^4.12.0",
+    "@react-oauth/google": "^0.11.0",
     "@remix-run/node": "^1.14.3",
     "@remix-run/react": "^1.14.3",
     "@remix-run/vercel": "^1.14.3",
@@ -24,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "isbot": "latest",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "node-cron": "^3.0.2",
     "react": "^18.2.0",
