--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "build": "npm run build:css && remix build",
-    "build:css": "tailwindcss -m -i ./styles/app.css -o app/tailwindcss.css",
+    "build:css": "tailwindcss -m -i ./app/tailwind.css -o app/tailwindcss.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/tailwindcss.css",
     "typecheck": "tsc"
