--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:css": "tailwindcss -m -i ./app/tailwind.css -o app/tailwindcss.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/tailwindcss.css",
+    "deploy": "fly deploy --remote-only",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -18,12 +19,14 @@
     "@mui/material": "^5.12.1",
     "@prisma/client": "^4.12.0",
     "@react-oauth/google": "^0.11.0",
+    "@remix-run/express": "^1.19.1",
     "@remix-run/node": "^1.14.3",
     "@remix-run/react": "^1.14.3",
     "@remix-run/vercel": "^1.14.3",
     "@vercel/node": "^2.6.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "google-auth-library": "^8.9.0",
     "isbot": "latest",
     "jwt-decode": "^3.1.2",
