--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@remix-run/react": "^1.14.3",
     "@remix-run/vercel": "^1.14.3",
     "@vercel/node": "^2.6.2",
+    "@vercel/remix": "^1.19.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
