--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   },
   "scripts": {
     "build": "npm run build:css && remix build",
-    "build:css": "npx tailwindcss -m -i ./app/tailwind.css -o app/tailwindcss.css",
+    "build:css": "tailwindcss -m -i ./app/tailwind.css -o app/tailwindcss.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "npx tailwindcss -w -i ./styles/app.css -o app/tailwindcss.css",
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/tailwindcss.css",
     "deploy": "vercel deploy",
     "typecheck": "tsc"
   },
@@ -37,8 +37,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-string-replace": "^1.1.0",
-    "react-transition-group": "^4.4.5",
-    "tailwindcss": "^3.2.7"
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.14.3",
@@ -56,6 +55,7 @@
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "prisma": "^4.12.0",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.8.4"
   },
   "engines": {
